--- a/src/main/resources/templates/mail/created-tasks-everyday-mail.html
+++ b/src/main/resources/templates/mail/created-tasks-everyday-mail.html
@@ -114,10 +114,10 @@
                                             </tbody>
                                         </table>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            Application functionality:
+                                            List of Tasks in Db:
                                         </p>
-                                        <ul th:each="function : ${application_functionality}">
-                                            <li th:text="${function}"></li>
+                                        <ul th:each="tasks : ${database_tasks}">
+                                            <li th:text="${tasks}"></li>
                                         </ul>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;" th:text="${goodbye_message}"></p>
                                     </td>
